--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-  "builds": [
-    { "src": "app.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "app.py" }
-  ],
-  "functions": {
-    "app.py": {
-      "maxDuration": 30
-    }
+  "build": {
+    "command": "pip install -r requirements.txt && streamlit config --global.showWarningOnDirectExecution=false"
   }
 }
