--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "build": {
-    "command": "pip install -r requirements.txt && streamlit config --global.showWarningOnDirectExecution=false"
-  }
+  "installCommand": "pip install -r requirements.txt",
+  "buildCommand": "echo 'Build completed'"
 }
