--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "installCommand": "pip install -r requirements.txt",
-  "buildCommand": "echo 'Build completed'"
+  "installCommand": "pip install -r requirements.txt"
 }
