--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-  "installCommand": "pip install -r requirements.txt"
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
+  "installCommand": "pip install -r requirements.txt --no-cache-dir",
+  "buildCommand": "echo 'Build completed'"
 }
